<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteAndReminder</string>
    <string name="action_settings">Settings</string>
    <string name="TitleHomeString"><b>NoteAndReminder</b></string>
    <string name="Header1HomeString">Create Notes and Reminders</string>
    <string name="WelcomeHomeString">Welcome!</string>
    <string name="Description1HomeString">It is really easy. Don\'t you trust on me? try it.</string>
    <string name="Header2HomeString">We remind your Reminders</string>
    <string name="Description2HomeString">Are you these kind of people used to forget everything? Don\'t thank us. We do it for you.</string>
    <string name="Header3HomeString">Stop worrying!</string>
    <string name="Description3HomeString">We know you are a disaster. Don\'t worry! we organize everything for you.</string>
    <string name="LoginButtonHomeString">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="TitleLoginString">Login</string>
    <string name="EmailLabelLoginString">Email:</string>
    <string name="PasswordLabelLoginString">Password:</string>
    <string name="LoginButtonLoginString">Login</string>
    <string name="NotesButtonHomeString">My notes</string>
    <string name="RemindersButtonHomeString">My reminders</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="TitleNotesString">My notes</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="TitleViewNoteString">Note</string>
    <string name="DescriptionViewNoteString">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="SubHeaderViewNoteString"><i>Creation date: 06/07/2015 12:56:12</i></string>
    <string name="HeaderViewNoteString"><b>Lorem ipsum</b></string>
    <string name="TitleNoteString">Lorem ipsum</string>
    <string name="SubTitleNoteString">Creation date: 06/07/2015 12:56:12</string>
    <string name="title_activity_reminders">RemindersActivity</string>
    <string name="TitleRemindersString">My Reminders</string>
    <string name="TitleReminderString">Lorem ipsum</string>
    <string name="SubTitleReminderString">Completion date: 06/07/2015 12:56:12</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="TitleViewReminderString">Reminder</string>
    <string name="HeaderViewReminderString">Lorem ipsum</string>
    <string name="SubHeaderViewReminderString">Creation date: 06/07/2015 12:56:12</string>
    <string name="DescriptionViewReminderString">Is Completed? <b>True</b></string>
    <string name="SubDescriptionViewReminderString"> Completion date: 06/07/2015 12:56:12</string>
    <string name="LogoutItemMenuString">Logout</string>
    <string name="ProfileItemMenuString">My profile</string>
    <string name="HomeItemMenuString">Home</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="TitleUserString">My profile</string>
    <string name="NameUserString">"Name: "</string>
    <string name="SurnameUserString">"Surname: "</string>
    <string name="EmailUserString">"Email: "</string>
    <string name="PasswordUserString">"Password: "</string>

</resources>
