<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="es.jab.noteandreminderandroid.MainActivity" >

    <LinearLayout
        android:id="@+id/TitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/NoteAndReminderHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TitleHomeString"
            android:textSize="30sp" />

        <View
            android:id="@+id/LineHome"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/WelcomeHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/WelcomeHomeString"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BodyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Header1Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/Header1HomeString"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Description1Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/Description1HomeString" /><TextView
            android:id="@+id/Header2Home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/Header2HomeString"
            android:textSize="20sp" />

            <TextView
                android:id="@+id/Description2Home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/Description2HomeString" />

            <TextView
                android:id="@+id/Header3Home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/Header3HomeString"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Description3Home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/Description3HomeString" />

            <LinearLayout
                android:id="@+id/LoginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp" >

                <Button
                    android:id="@+id/LoginButtonHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LoginButtonHomeString" />

            </LinearLayout>

    </LinearLayout>

    

</LinearLayout>
