<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jab.noteandreminderandroid.activity.ReminderActivity" >

    <LinearLayout
        android:id="@+id/TitleLayoutReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TitleViewReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TitleViewReminderString"
            android:gravity="right"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BodyLayoutReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/HeaderViewReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HeaderViewReminderString"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/SubHeaderViewReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/SubHeaderViewReminderString" />

        <TextView
            android:id="@+id/DescriptionViewReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/DescriptionViewReminderString"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/SubDescriptionViewReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/SubDescriptionViewReminderString" />

    </LinearLayout>

</LinearLayout>
