<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jab.noteandreminderandroid.activity.NoteActivity" >

    <LinearLayout
        android:id="@+id/TitleLayoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TitleViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/TitleViewNoteString"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BodyViewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/HeaderViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HeaderViewNote"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/SubHeaderViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/SubHeaderViewNoteString" />

        <TextView
            android:id="@+id/DescriptionViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/DescriptionViewNoteString" />

    </LinearLayout>

</LinearLayout>
