<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jab.noteandreminderandroid.activity.LoginActivity" >

    <LinearLayout
        android:id="@+id/TitleLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/TitleLoginString"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BodyLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/EmailLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/EmailLabelLogin"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/EmailInputLogin"
                android:text="@string/EmailLabelLoginString" />

            <EditText
                android:id="@+id/EmailInputLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PasswordLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/PasswordLabelLogin"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/PasswordInputLogin"
                android:text="@string/PasswordLabelLoginString" />

            <EditText
                android:id="@+id/PasswordInputLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LoginButtonLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/LoginButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LoginButtonLoginString" />
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
