<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jab.noteandreminderandroid.UserActivity" >

    <LinearLayout
        android:id="@+id/TitleLayoutUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TitleUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/TitleUserString"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BodyLayoutUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >
        
        <LinearLayout
            android:id="@+id/NameLayoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/NameUser"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/NameInputUser"
                android:text="@string/NameUserString" />

            <EditText
                android:id="@+id/NameInputUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="text" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/SurnameLayoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/SurnameUser"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/SurnameInputUser"
                android:text="@string/SurnameUserString" />

            <EditText
                android:id="@+id/SurnameInputUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="text" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/EmailLayoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/EmailUser"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/EmailInputUser"
                android:text="@string/EmailUserString" />

            <EditText
                android:id="@+id/EmailInputUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/PasswordLayoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/PasswordUser"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/PasswordInputUser"
                android:text="@string/PasswordUserString" />

            <EditText
                android:id="@+id/PasswordInputUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
